tests/test108.rael.exp
Error [tests/test108.rael:3:5]: 'break' is outside of a loop
|     break
|     ^
